<resources>
    <string name="app_name">FoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered ? </string>
    <string name="don_t_have_an_account">Don\'t have an account ? </string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="user_name">User Name</string>
    <string name="user_user_com">user@user.com</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="product_name">Product Name</string>
    <string name="_5_0">5.0</string>
    <string name="your_favourite_and_testy_food_is_here">your favourite and testy food is here!</string>
    <string name="_10_weekend_delicios_ndinner_recipes">10 weekend Delicios \nDinner Recipes</string>
    <string name="make_order">Make Order</string>
</resources>